webpack分离css打包，现在图片被打包后还是有const

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>辣鸡</title>
+    <link rel="stylesheet" href="dist/bundle.css">
     <script src="./jquery-3.5.1.min.js"></script>
 </head>
 <body>
