把html变成了vue了

--- a/index.html
+++ b/index.html
@@ -3,19 +3,18 @@
 <head>
     <meta charset="utf-8">
     <title>辣鸡</title>
-    <link rel="stylesheet" href="dist/bundle.css">
-    <script src="./jquery-3.5.1.min.js"></script>
+<!--    <link rel="stylesheet" href="./bundle.css">-->
+<!--    <script src="./jquery-3.5.1.min.js"></script>-->
 </head>
 <body>
-<div>
+    <div id="app"></div>
+    <div id="aaa"></div>
   <button id="btn" class="btn">点我</button>
   <br>
     jQuery插件开发方式主要有三种<br/>
     1 通过$.extend()来扩展jQuery<br/>
     2 通过$.fn 向jQuery添加新的方法<br/>
     3 通过$.widget()应用jQuery UI的部件工厂方式创建<br/>
-  </div>
-  <div>
     <ul>
       <li>
         <a target="_blank" href="https://www.cnblogs.com/ajianbeyourself/p/5815689.html#_label0">这个有点用</a>
@@ -27,8 +26,7 @@
         <a href="http://wayouliu.duapp.com/">我的小站</a>
       </li>
     </ul>
-  </div>
-  <div id="lunbo"></div>
+<!--  <div id="lunbo"></div>-->
 </body>
-<script src="./dist/bundle.js"></script>
+<!--<script src="./bundle.js"></script>-->
 </html>
