--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
 <head>
     <meta charset="utf-8">
     <title>辣鸡</title>
-<!--    <link rel="stylesheet" href="./bundle.css">-->
-<!--    <script src="./jquery-3.5.1.min.js"></script>-->
 </head>
 <body>
     <div id="app"></div>
-    <div id="aaa"></div>
   <button id="btn" class="btn">点我</button>
   <br>
     jQuery插件开发方式主要有三种<br/>
@@ -26,7 +23,6 @@
         <a href="http://wayouliu.duapp.com/">我的小站</a>
       </li>
     </ul>
-<!--  <div id="lunbo"></div>-->
+  <div id="lunbo"></div>
 </body>
-<!--<script src="./bundle.js"></script>-->
 </html>
