--- a/index.html
+++ b/index.html
@@ -24,5 +24,28 @@
       </li>
     </ul>
   <div id="lunbo"></div>
+
+    <div id="box">
+        <div id="left">
+            <ul></ul>
+        </div>
+        <div id="right">
+            <ul></ul>
+        </div>
+    </div>
 </body>
 </html>
+<style>
+    #box {
+        display: flex;
+        flex-direction: row;
+    }
+    #left, #right {
+        width: 100px;
+        height: 100px;
+        background: #3498db;
+    }
+    #left {
+        background: brown;
+    }
+</style>
